# audace_engine

./: CMakeLists.txt  README.md
android_platform/: settings.gradle
android_platform/app/: build.gradle
android_platform/app/src/main/: AndroidManifest.xml
android_platform/app/src/main/cpp/: AuLogger.cpp  AuLogger.h  CMakeLists.txt  EglWindow.cpp  EglWindow.h  EntryPoint.cpp  au_platform.h
android_platform/app/src/main/res/values/: strings.xml  themes.xml
android_platform/app/src/main/res/values-night/: themes.xml
android_platform/gradle/wrapper/: gradle-wrapper.properties
engine_core/: Application.h  BaseGameWindow.h  CMakeLists.txt  RenderContext.cpp  RenderContext.h  au_renderer.h
engine_core/renderer/: DataBuffer.cpp  DataBuffer.h  ShaderProgram.cpp  ShaderProgram.h  VertexArray.cpp  VertexArray.h
engine_src/: AuLogger.cpp  AuLogger.h  EngineEventListener.h
engine_src/android_platform/: FileLoader.cpp  FileLoader.h  ImageData.cpp  ImageData.h  au_renderer.h  platform_defs.h
engine_src/application/: BaseAppController.h
engine_src/content/: AssetStore.cpp  AssetStore.h  ByteBuffer.cpp  ByteBuffer.h  JsonSerializer.cpp  JsonSerializer.h  Model.h  ModelLoader.cpp  ModelLoader.h
engine_src/geom/: VoxelTerrainGen.cpp  VoxelTerrainGen.h
engine_src/glfw_platform/: FileLoader.cpp  FileLoader.h  GameWindow.cpp  GameWindow.h  ImageData.cpp  ImageData.h  KeyboardManager.cpp  KeyboardManager.h  MouseManager.cpp  MouseManager.h  au_renderer.h  platform_defs.h
engine_src/glfw_platform/include/glad/: glad.h
engine_src/include/imgui/: imgui.cpp
engine_src/input/: BooleanActionHandler.cpp  BooleanActionHandler.h  BooleanInputEvent.h  BooleanInputHandler.cpp  BooleanInputHandler.h  ButtonInputEvent.h  FloatInputEvent.h  InputDevices.cpp  InputDevices.h  InputEvent.cpp  InputEvent.h  KeyInputEvent.h  PoseInputEvent.h  Vec2InputEvent.h
engine_src/math/: Pose.h  RectGrid.cpp  RectGrid.h
engine_src/renderer/: DataBuffer.cpp  DataBuffer.h  Material.h  Mesh.cpp  Mesh.h  ShaderProgram.cpp  ShaderProgram.h  Shapes.cpp  Shapes.h  Sprite.cpp  Sprite.h  Texture2d.cpp  Texture2d.h  VertexArray.cpp  VertexArray.h  VertexAttribute.cpp  VertexAttribute.h
engine_src/renderer/light/: PointLight.h
engine_src/renderer/material/: BaseMaterial.h  Material.h  SimpleBillboardMaterial.h
engine_src/renderer/text/: BitmapFont.cpp  BitmapFont.h  TextLabel.cpp  TextLabel.h
engine_src/scene/: BaseCamera.h  BasicCameraController.cpp  BasicCameraController.h  ForwardCamera.cpp  ForwardCamera.h  ICameraController.h  PoseCameraController.cpp  PoseCameraController.h  Scene.cpp  Scene.h
engine_src/util/: RandomUniformFloats.cpp  RandomUniformFloats.h  StringUtil.h
glfw_platform/: AuLogger.cpp  AuLogger.h  CMakeLists.txt  EntryPoint.cpp  GameWindow.cpp  GameWindow.h  au_platform.h
sandbox/: SandboxApp.cpp  SandboxApp.h
sandbox/android_sandbox/: settings.gradle
sandbox/android_sandbox/app/: build.gradle
sandbox/android_sandbox/app/src/main/: AndroidManifest.xml
sandbox/android_sandbox/app/src/main/cpp/: AppController.cpp  AppController.h  CMakeLists.txt  EglWindow.cpp  EglWindow.h  SceneEnum.h  au_renderer.h  main.cpp
sandbox/android_sandbox/app/src/main/res/values/: strings.xml
sandbox/android_sandbox/gradle/wrapper/: gradle-wrapper.properties
sandbox/app_src/: MainScene.cpp  MainScene.h  SceneEnum.h
sandbox/app_src/scene/: DragDropScene.cpp  DragDropScene.h  MainScene.cpp  MainScene.h  NavigationScene.cpp  NavigationScene.h  ProcTerrainScene.cpp  ProcTerrainScene.h  SceneBuilder.cpp  SceneBuilder.h  TextScene.cpp  TextScene.h
sandbox/assets/images/ground_051/: Ground051_1K-JPG.mtlx  Ground051_1K-JPG.usdc
sandbox/assets/materials/: dirtDarkFlat.json  dirtFlat.json  grassFlat.json  stoneFlat.json  waterFlat.json
sandbox/assets/models/: cliff_scene.mtl  firstMaterials_well.mtl
sandbox/assets/scenes/: MainScene.json
sandbox/assets/shaders/AU_simple_billboard/: fs.glsl  vs.glsl
sandbox/assets/shaders/AU_simple_text/: fs.glsl
sandbox/assets/shaders/color/: fs.glsl
sandbox/assets/shaders/obj_mtl/: fs.glsl  vs.glsl
sandbox/assets/shaders/standard/: fs.glsl  vs.glsl
sandbox/assets/shaders/terrain/: fs.glsl  vs.glsl
sandbox/glfw/: CMakeLists.txt  au_renderer.h  main.cpp
sandbox/glfw/include/: glad.c
sandbox/glfw_sandbox/: .gitignore  AppController.cpp  AppController.h  CMakeLists.txt  SceneEnum.h  glfw_sandbox.code-workspace  main.cpp
sandbox/glfw_sandbox/assets/shaders/color/: fs.glsl  vs.glsl
sandbox/glfw_sandbox/assets/shaders/standard/: fs.glsl
sandbox/glfw_sandbox/lib/: zlibstaticd.lib
sandbox/openxr_sandbox/: settings.gradle
sandbox/openxr_sandbox/app/: build.gradle
sandbox/openxr_sandbox/app/src/main/: AndroidManifest.xml
sandbox/openxr_sandbox/app/src/main/cpp/: AppController.cpp  AppController.h  CMakeLists.txt  EglWindow.cpp  EglWindow.h  audace_common.h  main.cpp
sandbox/openxr_sandbox/app/src/main/cpp/game/: Scene.cpp  Scene.h
sandbox/openxr_sandbox/app/src/main/cpp/lib/: openxr_platform.h
sandbox/openxr_sandbox/app/src/main/cpp/openxr/: HmdCamera.cpp  HmdCamera.h  OpenxrContext.cpp  OpenxrContext.h  OpenxrSwapchain.cpp  OpenxrSwapchain.h  OpenxrView.cpp  OpenxrView.h  openxr_common.h
sandbox/openxr_sandbox/app/src/main/res/values/: strings.xml  themes.xml
sandbox/openxr_sandbox/app/src/main/res/values-night/: themes.xml
sandbox/openxr_sandbox/gradle/wrapper/: gradle-wrapper.properties
sandbox/sandbox_droid/app/: build.gradle
sandbox/sandbox_droid/app/src/main/: AndroidManifest.xml
sandbox/sandbox_droid/app/src/main/cpp/: CMakeLists.txt
sandbox/sandbox_droid/app/src/main/res/values/: strings.xml  themes.xml
sandbox/sandbox_droid/gradle/wrapper/: gradle-wrapper.properties
sandbox/sandbox_windows/: CMakeLists.txt
sandbox_app/: SandboxApp.cpp  SandboxApp.h
sandbox_app/sandbox_droid/: settings.gradle
sandbox_app/sandbox_droid/app/src/main/cpp/: CMakeLists.txt
sandbox_app/sandbox_windows/: CMakeLists.txt  sandbox_windows.code-workspace
(+15 files in other folders)
